--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 * {
 
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-border: dashed 1px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: dashed 1px;
 
 }
 
@@ -37,15 +37,15 @@ header {
 
     background-color: var(--header-color);
     align-items: center;
+    margin: auto;
     color: var(--header-text-color);
     height: 80px;
     width: 80%;
-    margin: auto;
 
     .menu a {
 
         color: var(--header-text-color);
-        
+
 
     }
 }
@@ -54,7 +54,7 @@ header {
 .icon-menu,
 .logo {
 
-    gap: 1;
+    flex-grow: 1;
 
 
 
@@ -62,16 +62,23 @@ header {
 
 .logo {
 
-    justify-content: center;
+    text-align: center;
 
-    
+
+
+
 }
 
 .img {
 
 
-width: 20%;
-    
-    
+    width: 140px;
+    padding-top: 5px;
+
+
 }
 
+.icon-menu {
+
+    text-align: end;
+}
