--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,6 @@ header {
 
 
 
-.photo {
-
-    max-width: 100%;
-}
-
 
 
 
@@ -104,8 +99,10 @@ header {
 
   div.hover-img {
     position: absolute;
-    top: 77%;
-    left: 80%;
+    width: 400px;
+    height: 600px;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     display: none;
 
